@@ -19,6 +19,7 @@ Bug Fixes
 - Fixed but were main character selection under TS always used default format
 - Fixed a bunch of undefined errors including the one in crons
 - Name to Reg and Check in TS is now Shortened to 30 if longer
+- Removed Corp Description as some can Break XML
 
 ----------------------
 Version 1.1.2 -> 1.2.0
